@@ -3448,9 +3448,11 @@ standard function @code{c} in @pkg{base}.
 Some additional steps are needed for packages which make use of formal
 (S4-style) classes and methods (unless these are purely used
 internally).  The package should have @code{Depends: methods} in its
-@file{DESCRIPTION} file and any classes and methods which are to be
-exported need to be declared in the @file{NAMESPACE} file.  For example,
-the @pkg{stats4} package has
+@file{DESCRIPTION} file@footnote{This was necessary at least prior to
+@R{} 3.0.2 as the @pkg{methods} package looked for its own @R{} code on
+the search path.}, @code{import(methods)} in the @file{NAMESPACE} file
+and any classes and methods which are to be exported need to be declared
+in the @file{NAMESPACE} file.  For example, the @pkg{stats4} package has
 
 @findex exportClasses
 @findex exportMethods
